# FedLesScan

./: .gitignore  FedLess.drawio  README.md  codecov.yml  invoke-faas.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
docker_images/flower/: Dockerfile
docker_images/knative/: Dockerfile
docker_images/python3-http-debian/: Dockerfile  index.py
experiment/: femnist-demo.yaml  mnist-demo.yaml  run-femnist-demo.sh  run-mnist-demo.sh  run-shakespeare-demo.sh  run-speech-demo.sh  shakespeare-demo.yaml  speech-demo.yaml
experiment/controlled/: mnist-demo.yaml  run-femnist-controlled.sh  run-mnist-controlled.sh  run-shakespeare-controlled.sh  run-speech-controlled-copy.sh  run-speech-controlled.sh  speech-demo.yaml
experiment/flower/: client.Dockerfile  client.py  mnist-demo.sh  mnist-demo.yaml  run.sh  server.py
experiment/ideal/: femnist-demo.yaml  run-femnist-normal.sh  run-mnist-normal.sh  speech-demo.yaml  (+3 more)
experiments/: billing.ipynb  fedkeeper-comparisons.ipynb  fedless-analysis-ieee-camera-ready.ipynb  fedless-analysis-ieee.ipynb  fedless-analysis.ipynb  leaf-fedless-comparison.ipynb  plot_utils.py
fedless/: aggregation.py  auth.py  client.py  cluster.py  data.py  invocation.py  models.py  persistence.py  providers.py  serialization.py  validation.py
requirements/: requirements.txt  test_requirements.txt
test/: common.py  fixtures.py  stubs.py  test_aggregation.py  test_client.py  test_cluster.py  test_data.py  test_integ_client.py  test_invocation.py  test_models.py  test_persistence.py  test_providers.py  test_serialize.py  test_validation.py
(+287 files in other folders)
